--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@ cluck cluck handpicked and lovingly BAWK cluck cluck our farms bawk cluck cluck 
        
     <h2><a name="newsletter-header">  Subscribe to our newsletter </a> </h2>
          <p> ...Unless you're too chicken.</p>
-        <form action="/submit-email">
+        <form action="https://www.freecodecamp.com/email-submit">
          
         <input type="text" pattern="[^ @]*@[^ @]*" placeholder ="email address" >
          <button type="submit" value="Submit"> Submit </button>
